--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"react-dom": "^18.2.0",
 		"react-google-button": "^0.7.2",
 		"react-router-dom": "^6.4.3",
-		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -32,8 +31,7 @@
 		"test:e2e": "npx cypress run",
 		"format": "prettier --write .",
 		"lint": "eslint src/**/*.js",
-		"snyk": "snyk code test",
-		"pro": "env-cmd -e PRODUCTION npm run build"
+		"snyk": "snyk code test"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -65,6 +63,7 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.31.10",
 		"prettier": "^2.7.1",
-		"react-refresh": "^0.14.0"
+		"react-refresh": "^0.14.0",
+		"react-scripts": "5.0.1"
 	}
 }
