--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Dependencies 
         run: npm ci
       - name: Lint
-        run: npm run lint
+        run: npx eslint src/**/*.js
       - name: Send Slack Notification on Failure
         if: ${{ failure() }}
         uses: 8398a7/action-slack@v3
