--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -130,6 +130,30 @@ jobs:
           fields: repo,message,author,eventName,workflow,job,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
+  slack_pull_request:
+    needs: [e2e_test]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Notify slack pull request open
+      if: ${{ github.event_name == 'pull_request' }}
+      env: 
+        SLACK_WEBHOOK_URL : ${{secrets.SLACK_PULL_REQUEST_WEBHOOK}}
+        PULL_REQUEST_NUMBER : ${{ github.event.pull_request.number }}
+        PULL_REQUEST_TITLE : ${{ github.event.pull_request.title }}
+        PULL_REQUEST_AUTHOR_NAME : ${{ github.event.pull_request.user.login }}
+        PULL_REQUEST_AUTHOR_ICON_URL : ${{ github.event.pull_request.user.avatar_url }}
+        PULL_REQUEST_URL : ${{ github.event.pull_request.html_url }}
+        PULL_REQUEST_BODY : ${{ github.event.pull_request.body }}
+        PULL_REQUEST_COMPARE_BRANCH_OWNER: ${{ github.event.pull_request.head.repo.owner.login }}
+        PULL_REQUEST_COMPARE_BRANCH_NAME : ${{ github.event.pull_request.head.ref }}
+        PULL_REQUEST_BASE_BRANCH_OWNER: ${{ github.event.pull_request.base.repo.owner.login }}
+        PULL_REQUEST_BASE_BRANCH_NAME : ${{ github.event.pull_request.base.ref }}
+        IS_SEND_HERE_MENTION : false
+        MAKE_PRETTY : true
+        MAKE_COMPACT : true
+        IS_PR_FROM_FORK: false
+      uses: jun3453/slack-pr-open-notification-action@v1.3.0
  # Deploy artifact to AWS
   deploy:
     needs: [e2e_test, build]
