--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,19 +43,16 @@ jobs:
 #Configure security actions with snyk
   security:
     runs-on: ubuntu-latest
-    env:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     steps:
-      - name: Checkout
-        uses: actions/checkout/@v3
-      - name: Set up Node 14
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v1
         with:
-          node-version: 14
-      - name: install Snyk CLI
-        run: npm install -g snyk
-      - name: run Snyk Code Test
+          go-version: '1.13'
+      - name: Snyk monitor
         run: snyk code test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       - name: Send Slack Notification on Failure
         if: ${{ failure() }}
         uses: 8398a7/action-slack@v3
