--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -13,15 +13,15 @@ jobs:
         name: sync folder
         with:
           command: sync
-          source: s3://appcodojo/CodojoApp-0.0.1-SNAPSHOT.jar
+          source: s3://${{secrets.AWS_S3_BUCKET_APP}}/
           destination: ./public/app/
-          aws_access_key_id: AKIAZC2QT5JH7PXYIT75
-          aws_secret_access_key: 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
-          aws_region: us-east-1
+          aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_region: ${{secrets.AWS_REGION}}
       - name: Commit changes
         run: |
          git config --local user.email "lautynievas09@gmail.com"
          git config --local user.name "Lautaro Nievas"
          git add .
          git diff-index --quiet HEAD || git commit -m "add app" -a
-         git push origin main:main
+         git push origin test:test
