--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -24,4 +24,4 @@ jobs:
          git config --local user.name "Lautaro Nievas"
          git add .
          git diff-index --quiet HEAD || git commit -m "add app" -a
-         git push origin test:test
+         git push origin main:main
