--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,29 @@ jobs:
           fields: repo,message,author,eventName,workflow,job,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
- # Creates a build and uploads anartifact
+
+#Configure security actions with snyk
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v1
+        with:
+          go-version: '1.13'
+      - name: Snyk monitor
+        run: snyk code test
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Send Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,author,eventName,workflow,job,took
+        env: 
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+ # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
     steps: 
@@ -72,7 +94,7 @@ jobs:
 
 # Test components
   e2e_test:
-    needs: [lint, build]
+    needs: [lint,security, build]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
