--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@aws-amplify/ui-react": "^3.6.0",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.4",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"autoprefixer": "10.4.5",
-		"aws-amplify": "^4.3.43",
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"dotenv": "^16.0.3",
@@ -17,8 +19,9 @@
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
-		"react-google-button": "^0.7.2",
 		"react-router-dom": "^6.4.3",
+		"styled-components": "^5.3.6",
+		"styled-system": "^5.1.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
