--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"autoprefixer": "10.4.5",
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
+		"design-kit-codojo": "^1.0.6",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"jwt-decode": "^3.1.2",
@@ -20,8 +21,6 @@
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.3",
-		"styled-components": "^5.3.6",
-		"styled-system": "^5.1.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
