--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
 	"name": "uilogin",
 	"version": "0.1.0",
 	"private": true,
+	"module": "true",
 	"dependencies": {
-		"@emotion/react": "^11.10.5",
-		"@emotion/styled": "^11.10.5",
-		"@mui/icons-material": "^5.11.0",
-		"@mui/material": "^5.11.4",
+		"@react-oauth/google": "^0.6.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"autoprefixer": "10.4.5",
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
+		"design-kit-codojo": "^1.0.7",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"jwt-decode": "^3.1.2",
@@ -20,8 +19,6 @@
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.3",
-		"styled-components": "^5.3.6",
-		"styled-system": "^5.1.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -67,6 +64,6 @@
 		"eslint-plugin-react": "^7.31.10",
 		"prettier": "^2.7.1",
 		"react-refresh": "^0.14.0",
-		"react-scripts": "5.0.1"
+		"react-scripts": "^5.0.1"
 	}
 }
