--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -72,6 +72,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Install Dependencies 
+        run: npm ci
       - name: 'Create env file'
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
