--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,6 +61,7 @@ jobs:
           fields: repo,message,author,eventName,workflow,job,took
         env: 
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
  # Creates a build and uploads an artifact
   build:
     runs-on: ubuntu-latest
@@ -72,6 +73,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - run: npm install --legacy-peer-deps
       - name: Install Dependencies 
         run: npm ci
       - name: 'Create env file'
