--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -73,9 +73,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: npm install --legacy-peer-deps
       - name: Install Dependencies 
-        run: npm ci
+        run: npm install --force
       - name: 'Create env file'
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
