--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -84,9 +84,41 @@ jobs:
         with:
           name: build
           path: build
+    
+  e2e_test:
+    needs: [lint,security, build]
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: build
+      - name: E2E Test
+        uses: cypress-io/github-action@v4
+        env:
+          CYPRESS_githubClientId: ${{secrets.CLIENT_GITHUB_ID}}
+          CYPRESS_googleClientId: ${{secrets.GOOGLE_CLIENT_ID}}
+          CYPRESS_googleRefreshToken: ${{secrets.GOOGLE_REFRESH_TOKEN}}
+          CYPRESS_googleClientSecret: ${{secrets.GOOGLE_CLIENT_SECRET}}
+      - name: Send Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,author,eventName,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
 # Test components
   slack_pull_request:
+    needs: [e2e_test]
     runs-on: ubuntu-latest
     steps:
     - name: Notify slack pull request open
@@ -110,7 +142,7 @@ jobs:
       uses: jun3453/slack-pr-open-notification-action@v1.3.0
  # Deploy artifact to AWS
   deploy:
-    needs: [build]
+    needs: [e2e_test, build]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
