--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install Dependencies 
-        run: npm ci
+        run: npm install
       - name: 'Create env file'
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
