--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -100,6 +100,7 @@ jobs:
         with:
           name: build
           path: build
+      - run: npm install
       - name: E2E Test
         uses: cypress-io/github-action@v4
         env:
