--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -64,8 +64,9 @@ jobs:
 
  # Creates a build and uploads an artifact
   build:
+    if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
-    steps: 
+    steps:
       - name: Checkout
         uses: actions/checkout/@v3
         with:
