--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
 		"autoprefixer": "10.4.5",
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
-		"design-kit-codojo": "^1.0.18",
+		"design-kit-codojo": "^1.0.20",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.4.3",
+		"redux": "^4.2.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
