--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
          git config --local user.email "lautynievas09@gmail.com"
          git config --local user.name "Lautaro Nievas"
+         git config --global  pull.ff true
          git pull origin dev-lautaro
          git add .
          git diff-index --quiet HEAD || git commit -m "add app" -a
