--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -2,7 +2,7 @@ name: automatic download to CodojoApp
 
 on:
   workflow_dispatch:
-    branches: [test]
+    branches: [main]
 jobs:
 # Cancel Previous Redundant Builds
   download-app:
@@ -22,11 +22,9 @@ jobs:
         run: |
          git config --local user.email "lautynievas09@gmail.com"
          git config --local user.name "Lautaro Nievas"
-         git config --global  pull.ff true
-         git pull origin dev-lautaro
          git add .
          git diff-index --quiet HEAD || git commit -m "add app" -a
-         git push origin dev-lautaro:dev-lautaro
+         git push origin main:main
 
   build-app:
     needs: [download-app]
