--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"design-kit-codojo": "^1.1.8",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
+		"file-saver": "^2.0.5",
+		"jszip": "^3.10.1",
 		"jwt-decode": "^3.1.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
@@ -75,4 +77,6 @@
 		"react-refresh": "^0.14.0",
 		"react-scripts": "^5.0.1"
 	}
+
+	
 }
