--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 	"private": true,
 	"module": "true",
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
 		"@material-ui/core": "^4.12.4",
+		"@mui/material": "^5.11.12",
 		"@react-oauth/google": "^0.6.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
