react version update

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install Dependencies 
-        run: npm install --legacy-peer-deps
+        run: npm install
       - name: 'Create env file'
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
@@ -110,7 +110,7 @@ jobs:
         with:
           name: build
           path: build
-      - run: npm install --legacy-peer-deps
+      - run: npm install
       - name: E2E Test
         uses: cypress-io/github-action@v4
         env:
