--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"module": "true",
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
-		"@material-ui/core": "^4.12.4",
+		"@mui/material": "^5.11.12",
 		"@react-oauth/google": "^0.6.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -21,10 +22,10 @@
 		"file-saver": "^2.0.5",
 		"jszip": "^3.10.1",
 		"jwt-decode": "^3.1.2",
-		"react": "^18.0.0",
+		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-cytoscapejs": "^2.0.0",
-		"react-dom": "^18.0.0",
+		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.4.3",
 		"redux": "^4.2.1",
