--- a/src/app/SendToCodojo.config.properties
+++ b/src/app/SendToCodojo.config.properties
@@ -24,5 +24,20 @@ APPLICATION.FILEPATH =
 // If this is set to yes, the application will POST the results your Codojo account. The results can be viewed immediately online
 // If this is set to no, a JSON will be created locally in the same file as the executable so that the application output can be viewed. There is no workflow to manually post this file to Codojo. 
 // options =  yes   no
-SEND.JSON.TO.SAAS.AUTOMATICALLY = yes
+SEND.JSON.TO.SAAS.AUTOMATICALLY =yes
 
+//**************************
+***** NOT REQUIRED FIELDS ******
+****************************// 
+
+TYPE.DB=
+
+HOST.DB=
+
+PORT.DB=
+
+NAME.DB=
+
+USER.DB=
+
+PASSWORD.DB=
