--- a/src/app/SendToCodojo.config.properties
+++ b/src/app/SendToCodojo.config.properties
@@ -17,7 +17,7 @@ The application will gather
 // Do not share your user key with friends so that you avoid unwanted activity
 USER.APPLICATION.KEY =
 
-// Pth of application to scan 
+// Path of application to scan 
 // example = "C:\Users\foo bar\application name"
 APPLICATION.FILEPATH =
 
