--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 		"axios": "^1.1.3",
 		"bootstrap": "^5.2.2",
 		"cytoscape": "^3.23.0",
+		"cytoscape-cola": "^2.5.1",
 		"cytoscape-compound-drag-and-drop": "^1.1.0",
-		"design-kit-codojo": "^1.1.15",
+		"cytoscape-dagre": "^2.5.0",
+		"cytoscape-fcose": "^2.2.0",
+		"design-kit-codojo": "^1.1.19",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"file-saver": "^2.0.5",
