--- a/src/app/SendToCodojo.config.properties
+++ b/src/app/SendToCodojo.config.properties
@@ -1,9 +1,9 @@
 //*******************************
-This is a configuration file to execute with codojo application discovery.
+This is a configuration file to execute with Codojo’s application analysis.
 
 How does it work? 
 The application will gather
-1) a list of database table names
+1) A list of database table names
 2) A list of application classes
 3) The relationships between classes and database tables
 *********************************// 
@@ -12,21 +12,25 @@ The application will gather
 ***** REQUIRED FIELDS ******
 ****************************// 
 
-// this is your unique Codojo key to uplaod an application that can be found at https://app.codojo.io/how-to-add-application  This key has no function other than uploading applications to your account. 
+// this is your unique Codojo key to upload an application that can be found at https://app.codojo.io/how-to-add-application  
+// This key has no function other than uploading applications to your account. 
 // Do not share your user key with friends so that you avoid unwanted activity
-USER.APPLICATION.KEY =
+USER.APPLICATION.KEY = 
 
+// If this =yes, the application will send the app analysis to your Codojo account. The results can be viewed immediately online
+// If this =no, a JSON will be created locally so that the application output can be viewed. The results will not be sent to Codojo
+SEND.JSON.TO.SAAS.AUTOMATICALLY = yes
 
-// If this =yes, the application will POST the results your Codojo account. The results can be viewed immediately online
-// If this =no, a JSON will be created locally in the same folder as the executable so that the application output can be viewed. The results will not be sent to Codojo
-// options =  yes   no
-SEND.JSON.TO.SAAS.AUTOMATICALLY =yes
 
 //**************************
-***** NOT REQUIRED FIELDS ******
+***** OPTIONAL FIELDS ******
 ****************************// 
 
-// Path of application to scan. If this is empty, the application will scan it's current folder and subfolders for all JAVA files. 
-// example = "C:\Users\foo bar\application_name"
+// Path of application to scan. If this is empty, the application will scan its current folder and subfolders for all JAVA files. 
+// example =    "C:\Users\foo bar\application_name"
 APPLICATION.FILEPATH = 
 
+
+// Name of application to show in Codojo. If NULL, the folder name will be used
+// example = My App
+APPLICATION.NAME = 
