--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"file-saver": "^2.0.5",
 		"jszip": "^3.10.1",
 		"jwt-decode": "^3.1.2",
+		"posthog-js": "^1.51.5",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
 		"react-cytoscapejs": "^2.0.0",
