--- a/src/app/SendToCodojo.config.properties
+++ b/src/app/SendToCodojo.config.properties
@@ -1,5 +1,5 @@
 //*******************************
-This is a configuration file to execute with Codojo’s application analysis.
+This is a configuration file to execute with Taffi’s application analysis.
 
 How does it work? 
 The application will gather
@@ -12,13 +12,13 @@ The application will gather
 ***** REQUIRED FIELDS ******
 ****************************// 
 
-// this is your unique Codojo key to upload an application that can be found at https://app.codojo.io/how-to-add-application  
+// this is your unique Taffi key to upload an application that can be found at https://app.codojo.io/how-to-add-application  
 // This key has no function other than uploading applications to your account. 
 // Do not share your user key with friends so that you avoid unwanted activity
 USER.APPLICATION.KEY = 
 
-// If this =yes, the application will send the app analysis to your Codojo account. The results can be viewed immediately online
-// If this =no, a JSON will be created locally so that the application output can be viewed. The results will not be sent to Codojo
+// If this =yes, the application will send the app analysis to your Taffi account. The results can be viewed immediately online
+// If this =no, a JSON will be created locally so that the application output can be viewed. The results will not be sent to Taffi
 SEND.JSON.TO.SAAS.AUTOMATICALLY = yes
 
 
@@ -31,6 +31,6 @@ SEND.JSON.TO.SAAS.AUTOMATICALLY = yes
 APPLICATION.FILEPATH = 
 
 
-// Name of application to show in Codojo. If NULL, the folder name will be used
+// Name of application to show in Taffi. If NULL, the folder name will be used
 // example = My App
 APPLICATION.NAME = 
