--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -94,6 +94,41 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
     
+  test:
+    if: ${{ github.event_name == 'push' }}
+    needs: [lint,security, build]
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: build
+      - run: npm install
+      - name: E2E Test
+        uses: cypress-io/github-action@v4
+        env:
+          CYPRESS_githubClientId: ${{secrets.CLIENT_GITHUB_ID}}
+          CYPRESS_googleClientId: ${{secrets.GOOGLE_CLIENT_ID}}
+          CYPRESS_googleRefreshToken: ${{secrets.GOOGLE_REFRESH_TOKEN}}
+          CYPRESS_googleClientSecret: ${{secrets.GOOGLE_CLIENT_SECRET}}
+          CYPRESS_getAppsUrl: ${{secrets.REACT_APP_API_TEST_URL}}
+          CYPRESS_getAppsToken: ${{secrets.API_GATEWAY_TOKEN}}
+
+      - name: Send Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,author,eventName,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   slack_pull_request:
     needs: [lint,security]
