--- a/src/app/SendToTaffi.config.properties
+++ b/src/app/SendToTaffi.config.properties
@@ -12,7 +12,7 @@ The application will gather
 ***** REQUIRED FIELDS ******
 ****************************// 
 
-// this is your unique Taffi key to upload an application that can be found at https://app.codojo.io/how-to-add-application  
+// this is your unique Taffi key to upload an application that can be found at https://app.taffi.io/how-to-add-application  
 // This key has no function other than uploading applications to your account. 
 // Do not share your user key with friends so that you avoid unwanted activity
 USER.APPLICATION.KEY = 
