--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"file-saver": "^2.0.5",
+		"fs": "^0.0.1-security",
 		"jszip": "^3.10.1",
 		"jwt-decode": "^3.1.2",
 		"posthog-js": "^1.53.2",
