--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"cytoscape-compound-drag-and-drop": "^1.1.0",
 		"cytoscape-dagre": "^2.5.0",
 		"cytoscape-fcose": "^2.2.0",
-		"design-kit-codojo": "^1.2.19",
+		"design-kit-codojo": "^1.2.23",
 		"dotenv": "^16.0.3",
 		"env-cmd": "^10.1.0",
 		"file-saver": "^2.0.5",
@@ -29,6 +29,7 @@
 		"posthog-js": "^1.53.2",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.6.0",
+		"react-csv": "^2.2.2",
 		"react-cytoscapejs": "^2.0.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
